--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,16 +38,16 @@ $susy: (
 @import 'laser_gems';
 @import 'index';
 
-body {
+html, body {
   margin: 0;
-  width: 100%;
+  padding: 0;
+  height: 100%;
 }
 
 .header {
   @include container(100%);
   background-color: #ff0066;
-  height: 200px;
-  margin-top: -35px;
+  height: 150px;
 }
 
 .content {
@@ -57,11 +57,14 @@ body {
 .footer {
   @include container(100%);
   background-color: #f1f1f2;
-  height: 200px;
-  clear: both;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 150px;
+
   .sponsor {
     @include span(2 of 12);
-    
+
     p {
       color: #000000;
       font-family: sans-serif;
